WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196030
typeOfDoubleSum is wrong for when NaN can be produced
https://bugs.webkit.org/show_bug.cgi?id=196030
Summary
typeOfDoubleSum is wrong for when NaN can be produced
Saam Barati
Reported
2019-03-20 13:53:21 PDT
Infinity - Infinity => NaN Is not accounted for.
Attachments
patch
(5.08 KB, patch)
2019-03-20 14:33 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-03-20 14:33:15 PDT
Created
attachment 365402
[details]
patch
Mark Lam
Comment 2
2019-03-20 14:39:53 PDT
Comment on
attachment 365402
[details]
patch LGTM too.
WebKit Commit Bot
Comment 3
2019-03-20 17:40:29 PDT
Comment on
attachment 365402
[details]
patch Rejecting
attachment 365402
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 365402, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=365402&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=196030
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 365402 from
bug 196030
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=365402
Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... A JSTests/stress/double-add-sub-mul-can-produce-nan.js M JSTests/ChangeLog M Source/JavaScriptCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/JavaScriptCore/ChangeLog' is out of date W: 4d40f7bafaea8029ae231f38a2a41421c8de85f4 and refs/remotes/origin/master differ, using rebase: :040000 040000 85bf7abca3a79b62a8c05669af0c40976710bc5a a69ecbb95b421f9bf452b0d5d197e76dddc5f3ff M JSTests :040000 040000 345ff4410c941d1627384c445a0909190368aac5 aca9e99a40d141f1cdcb7e217dc5a9b38fcd8b8a M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to
http://svn.webkit.org/repository/webkit/trunk
... A JSTests/stress/double-add-sub-mul-can-produce-nan.js M JSTests/ChangeLog M Source/JavaScriptCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/JavaScriptCore/ChangeLog' is out of date W: 4d40f7bafaea8029ae231f38a2a41421c8de85f4 and refs/remotes/origin/master differ, using rebase: :040000 040000 85bf7abca3a79b62a8c05669af0c40976710bc5a a69ecbb95b421f9bf452b0d5d197e76dddc5f3ff M JSTests :040000 040000 345ff4410c941d1627384c445a0909190368aac5 aca9e99a40d141f1cdcb7e217dc5a9b38fcd8b8a M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource From
https://git.webkit.org/git/WebKit
d67192ed7e9..ef6c3148711 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 243263 = d67192ed7e9efc330afba5524c134dfbc682dc76
r243264
= 996dffcff457b7bd0872ec61a9d10e2a42215515
r243265
= 7e125bb19efc0fce646a4589f869ea936df32dd0
r243266
= f9426b3fb8fa00e960f94a135116eb4b36f89b2a
r243267
= ef6c3148711bb4111b84a8635c0e10f7e3b95b93 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
https://webkit-queues.webkit.org/results/11588535
WebKit Commit Bot
Comment 4
2019-03-20 22:41:26 PDT
Comment on
attachment 365402
[details]
patch Clearing flags on attachment: 365402 Committed
r243277
: <
https://trac.webkit.org/changeset/243277
>
WebKit Commit Bot
Comment 5
2019-03-20 22:41:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-03-20 22:42:14 PDT
<
rdar://problem/49095288
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug